# poc-client

./: .gitignore  Cargo.toml
benches/: common.rs  parallel_requests.rs
src/: client.rs  error.rs  hac.rs  lib.rs  main.rs  request.rs  reqw.rs
src/routes/: quote.rs
tests/: test_request.rs
