[package]
authors = ["akash <akashgurava@outlook.com>"]
edition = "2018"
name = "poc-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
http = "*"
isahc = {version = "1", features = ["json"]}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
thiserror = "1"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "time", "sync"]}
tower = {version = "0.4", features = ["limit", "util"]}

[dev-dependencies]
wiremock = "0.4"
